# caja-git

./: .gitignore  README.md  git.py.in  meson.build
data/: caja-git.gresource.xml  meson.build
data/ui/: gitbranchdialog.ui  gitdiffdialog.ui  gitinfobar.ui  gitpropertypage.ui
src/: gitbranchdialog.py  gitdiffdialog.py  gitinfobar.py  gitpropertypage.py  utils.py  watchdog.py
src/ui/: __init__.py  gitbranchdialog.py  gitdiffdialog.py  gitinfobar.py  gitpropertypage.py
